sandc/test/fixtures/astRegression/shouldFail/productions/anonymousInnerClassInstantiationExpression/PropertyAccessor.sand
pub class PropertyAccessor {
    foo() {
        new Foo {
            (pub) x = y;
        }
    }
}